--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,8 @@ lifecycleRuntimeKtx = "2.6.1"
 activityCompose = "1.7.0"
 composeBom = "2023.08.00"
 nav = "2.7.7"
-
+retrofitVersion = "2.11.0"
+kotlinxCoroutineVer = "1.3.9"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -27,7 +28,9 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "nav" }
-
+retrofit = {group = "com.squareup.retrofit2", name = "retrofit" ,version.ref = "retrofitVersion"}
+gsonConverter = {group = "com.squareup.retrofit2", name = "converter-gson" ,version.ref = "retrofitVersion"}
+kotlinx-coroutines-android = {group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android" ,version.ref = "kotlinxCoroutineVer"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
