--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ composeBom = "2023.08.00"
 nav = "2.7.7"
 retrofitVersion = "2.11.0"
 kotlinxCoroutineVer = "1.3.9"
+materialVersion = "1.6.7"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -31,6 +32,7 @@ androidx-navigation = { group = "androidx.navigation", name = "navigation-compos
 retrofit = {group = "com.squareup.retrofit2", name = "retrofit" ,version.ref = "retrofitVersion"}
 gsonConverter = {group = "com.squareup.retrofit2", name = "converter-gson" ,version.ref = "retrofitVersion"}
 kotlinx-coroutines-android = {group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android" ,version.ref = "kotlinxCoroutineVer"}
+material = {group = "androidx.compose.material", name = "material" ,version.ref = "materialVersion"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
