Commit : Implement Hilt for dependency injection

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,9 @@ nav = "2.7.7"
 retrofitVersion = "2.11.0"
 kotlinxCoroutineVer = "1.3.9"
 materialVersion = "1.6.7"
+hiltVersion = "2.50"
+
+
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -33,8 +36,13 @@ retrofit = {group = "com.squareup.retrofit2", name = "retrofit" ,version.ref = "
 gsonConverter = {group = "com.squareup.retrofit2", name = "converter-gson" ,version.ref = "retrofitVersion"}
 kotlinx-coroutines-android = {group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android" ,version.ref = "kotlinxCoroutineVer"}
 material = {group = "androidx.compose.material", name = "material" ,version.ref = "materialVersion"}
+kapt = {group = "com.google.dagger", name = "hilt-android-compiler" ,version.ref = "hiltVersion"}
+hilt = {group = "com.google.dagger", name = "hilt-android" ,version.ref = "hiltVersion"}
+
+
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+hiltKotlinAndroid = { id = "com.google.dagger.hilt.android",version.ref = "hiltVersion"}
 
