--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,7 +13,8 @@ retrofitVersion = "2.11.0"
 kotlinxCoroutineVer = "1.3.9"
 materialVersion = "1.6.7"
 hiltVersion = "2.50"
-
+hiltNavigationVersion = "1.0.0"
+lifecycleRuntimeComposeAndroid = "2.8.0"
 
 
 [libraries]
@@ -38,6 +39,9 @@ kotlinx-coroutines-android = {group = "org.jetbrains.kotlinx", name = "kotlinx-c
 material = {group = "androidx.compose.material", name = "material" ,version.ref = "materialVersion"}
 kapt = {group = "com.google.dagger", name = "hilt-android-compiler" ,version.ref = "hiltVersion"}
 hilt = {group = "com.google.dagger", name = "hilt-android" ,version.ref = "hiltVersion"}
+hiltNavigation = {group = "androidx.hilt", name = "hilt-navigation-compose" ,version.ref = "hiltNavigationVersion"}
+androidx-lifecycle-runtime-compose-android = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycleRuntimeComposeAndroid" }
+
 
 
 
