--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,11 +10,12 @@ activityCompose = "1.7.0"
 composeBom = "2023.08.00"
 nav = "2.7.7"
 retrofitVersion = "2.11.0"
-kotlinxCoroutineVer = "1.3.9"
+kotlinxCoroutineVer = "1.7.3"
 materialVersion = "1.6.7"
 hiltVersion = "2.50"
 hiltNavigationVersion = "1.0.0"
 lifecycleRuntimeComposeAndroid = "2.8.0"
+okhttpVersion = "4.12.0"
 
 
 [libraries]
@@ -41,6 +42,7 @@ kapt = {group = "com.google.dagger", name = "hilt-android-compiler" ,version.ref
 hilt = {group = "com.google.dagger", name = "hilt-android" ,version.ref = "hiltVersion"}
 hiltNavigation = {group = "androidx.hilt", name = "hilt-navigation-compose" ,version.ref = "hiltNavigationVersion"}
 androidx-lifecycle-runtime-compose-android = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycleRuntimeComposeAndroid" }
+okhttp3 = {group = "com.squareup.okhttp3", name = "logging-interceptor" ,version.ref = "okhttpVersion"}
 
 
 
