--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,9 @@ okhttpVersion = "4.12.0"
 coilVersion = "2.6.0"
 room_version = "2.6.1"
 kspVersion = "1.9.21-1.0.16"
+dotsLoading = "1.2.3"
+material3_version = "1.3.0-beta05"
+compose_version = "1.7.0-beta07"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -34,7 +37,7 @@ androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
-androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3_version" }
 androidx-navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "nav" }
 retrofit = {group = "com.squareup.retrofit2", name = "retrofit" ,version.ref = "retrofitVersion"}
 gsonConverter = {group = "com.squareup.retrofit2", name = "converter-gson" ,version.ref = "retrofitVersion"}
@@ -49,6 +52,9 @@ coil = {group = "io.coil-kt", name = "coil-compose" ,version.ref = "coilVersion"
 room = {group = "androidx.room", name = "room-runtime" ,version.ref = "room_version"}
 kaptRoom = {group = "androidx.room", name = "room-compiler" ,version.ref = "room_version"}
 roomCoroutine = {group = "androidx.room", name = "room-ktx" ,version.ref = "room_version"}
+dotsLoading = {group = "com.github.razaghimahdi", name = "Compose-Loading-Dots" ,version.ref = "dotsLoading"}
+icons = {group = "androidx.compose.material", name = "material-icons-extended" ,version.ref = "compose_version"}
+
 
 
 
